crates/sniff-test/tests/snapshots/fixtures__dependency_safety_incomplete.snap
---
source: crates/sniff-test/tests/fixtures.rs
expression: messages
---
[
  {
    "artifact": {
      "crate-name": "dependency_safety_incomplete_app"
    },
    "findings": [
      {
        "kind": "safety-analysis-incomplete",
        "level": "deny",
        "reason": "safety analysis reached the configured node limit (2)",
        "root": "dependency_safety_incomplete_app::application",
        "root-kind": "concrete"
      }
    ],
    "format-version": 12,
    "reason": "sniff-test-artifact",
    "rustc-version": "[RUSTC_VERSION]",
    "tool-version": "0.1.0"
  }
]
