crates/sniff-test/tests/snapshots/fixtures__dependency_safety_unnamed_marker.snap
---
source: crates/sniff-test/tests/fixtures.rs
expression: messages
---
[
  {
    "artifact": {
      "crate-name": "dependency_safety_contract_app"
    },
    "findings": [
      {
        "function": "dependency_safety_contract::misses_named_requirement",
        "kind": "safety-obligation-missing-requirements",
        "level": "deny",
        "missing-requirements": [
          "initialized: global state must be initialized"
        ],
        "reason": "safety-obligation call to `dependency_safety_contract::requires_initialized_state` does not satisfy all # Safety requirements",
        "requirements": [
          "initialized: global state must be initialized"
        ],
        "root": "dependency_safety_contract_app::unnamed_marker_does_not_satisfy_cached_requirement",
        "root-kind": "concrete",
        "span": "[FIXTURE]/dep/src/lib.rs:14:5: 14:33",
        "target": "dependency_safety_contract::requires_initialized_state",
        "trace": [
          "src/lib.rs:16:5: 16:59: dependency_safety_contract_app::unnamed_marker_does_not_satisfy_cached_requirement --direct-call-> dependency_safety_contract::misses_named_requirement",
          "[FIXTURE]/dep/src/lib.rs:14:5: 14:33: dependency_safety_contract::misses_named_requirement --direct-call-> dependency_safety_contract::requires_initialized_state"
        ]
      }
    ],
    "format-version": 12,
    "reason": "sniff-test-artifact",
    "rustc-version": "[RUSTC_VERSION]",
    "tool-version": "0.1.0"
  }
]
