crates/sniff-test/tests/snapshots/fixtures__dependency_transitive_panic.snap
---
source: crates/sniff-test/tests/fixtures.rs
expression: "report[\"findings\"]"
---
[
  {
    "effect": "panic",
    "finding": "documented-obligation",
    "function": "dependency_transitive_panic_app::app",
    "kind": "effect",
    "level": "warn",
    "owner": {
      "crate": "dependency_transitive_panic_app",
      "scope": "workspace"
    },
    "reason": "call to `dependency_transitive_panic_middle::middle` with a documented `# Panics` obligation has no recorded `// PANIC:` justification",
    "root": "dependency_transitive_panic_app::app",
    "root-kind": "concrete",
    "root-span": "src/lib.rs:1:1: 1:23",
    "source-evidence": {
      "status": "verified-absent"
    },
    "span": "src/lib.rs:2:5: 2:53",
    "target": "dependency_transitive_panic_middle::middle",
    "trace": [
      "src/lib.rs:2:5: 2:53: dependency_transitive_panic_app::app --direct-call-> dependency_transitive_panic_middle::middle"
    ],
    "trace-id": "b9f1f2cf"
  }
]
