crates/sniff-test/tests/snapshots/fixtures__dependency_transitive_panic_four_crates.snap
---
source: crates/sniff-test/tests/fixtures.rs
expression: messages
---
[
  {
    "artifact": {
      "crate-name": "dependency_transitive_panic_outer"
    },
    "findings": [
      {
        "kind": "panic-invocation",
        "level": "deny",
        "reason": "panic sink core::std::rt::panic_fmt",
        "root": "dependency_transitive_panic_outer::outer",
        "root-kind": "concrete",
        "span": "[FIXTURE]/leaf/src/lib.rs:2:5: 2:46",
        "target": "core::std::rt::panic_fmt",
        "trace": [
          "src/lib.rs:2:5: 2:47: dependency_transitive_panic_outer::outer --direct-call-> dependency_transitive_panic_app::app",
          "[FIXTURE]/app/src/lib.rs:2:5: 2:53: dependency_transitive_panic_app::app --direct-call-> dependency_transitive_panic_middle::middle",
          "[FIXTURE]/middle/src/lib.rs:2:5: 2:49: dependency_transitive_panic_middle::middle --direct-call-> dependency_transitive_panic_leaf::leaf",
          "[FIXTURE]/leaf/src/lib.rs:2:5: 2:46: dependency_transitive_panic_leaf::leaf --macro-expansion-> macro core::std::assert",
          "[FIXTURE]/leaf/src/lib.rs:2:5: 2:46: macro core::std::assert --macro-expansion-> macro core::std::panic::panic_2021",
          "[SYSROOT]/lib/rustlib/src/rust/library/core/src/panic.rs:62:9: 62:73: macro core::std::panic::panic_2021 --direct-call-> core::std::rt::panic_fmt"
        ]
      }
    ],
    "format-version": 12,
    "reason": "sniff-test-artifact",
    "rustc-version": "[RUSTC_VERSION]",
    "tool-version": "0.1.0"
  }
]
