crates/sniff-test/tests/snapshots/fixtures__direct_panic.snap
---
source: crates/sniff-test/tests/fixtures.rs
expression: "report[\"findings\"]"
---
[
  {
    "kind": "panic-invocation",
    "level": "deny",
    "owner": {
      "crate": "direct_panic",
      "package-name": "direct-panic",
      "package-version": "0.1.0",
      "scope": "workspace"
    },
    "reason": "panic invocation to `core::panicking::panic_fmt` has no recorded `// PANIC:` justification",
    "root": "direct_panic::direct_panic",
    "root-kind": "concrete",
    "root-span": "src/lib.rs:1:1: 1:22",
    "source-evidence": {
      "status": "verified-absent"
    },
    "span": "src/lib.rs:2:5: 2:29",
    "target": "core::panicking::panic_fmt",
    "trace": [
      "src/lib.rs:2:5: 2:29: direct_panic::direct_panic --macro-expansion-> macro std::macros::panic",
      "src/lib.rs:2:5: 2:29: macro std::macros::panic --macro-expansion-> macro core::panic::panic_2021",
      "[SYSROOT]/lib/rustlib/src/rust/library/core/src/panic.rs:62:9: 62:73: macro core::panic::panic_2021 --direct-call-> core::panicking::panic_fmt"
    ]
  }
]
